--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fullpage.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/slick.css">
     <script src="js/jquery-3.7.1.js"></script>
     <script src="js/jquery-ui.js"></script>
@@ -116,7 +117,7 @@
             </p>
         </div><!--  h_2 -->
     </header>
-    <div id="fullpage">
+    <div id="fullpage" data-disable-mobile="true">
         <div class="section" id="section01">
             <i class="fullbg1"></i>
             <i class="fullbg2"></i>
